--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express": "^5.1.0"
   },
   "devDependencies": {
+    "@ljharb/tsconfig": "^0.3.2",
     "@types/express": "^5.0.1",
     "@types/node": "^22.14.0",
     "ts-node-dev": "^2.0.0",
